# CPP_Learn

./: AbstractFactoryPattern.cpp  Bridge.cpp  BridgeExample.cpp  CMake.md  CMakeLists.txt  Command.cpp  Decorator.cpp  DecoratorExample.cpp  Facade.cpp  FactoryPattern.cpp  FactoryPatternExample.cpp  FactoryPatternExampleFuture.cpp  FactoryPatternExampleFuture1.cpp  FactoryPatternExampleFuture2.cpp  GMock.md  MindMap.txt  OOPs.md  Observer.cpp  ObserverExample.cpp  ObserverExample1.cpp  PerformanceProfilingDebugging.md  Prototype.cpp  PrototypeExample.cpp  PrototypeExample1After.cpp  PrototypeExample1Before.cpp  Proxy.cpp  RaceConditionsDeadBlock.md  Strategy.cpp  cpp_compilation_and_build.md  sampleDebug.cpp
ExtraCPPfiles/: assert.cpp  r_l_value.cpp
ExtraCPPfiles/Templates/: SFINAE.cpp  concepts.cpp  templates.cpp  variadic_Templates.cpp
OS/: Deadlock.cpp  Racecondition.cpp  Semaphores.cpp  lock_Granurality.cpp
coding_problem (1)/coding_problem/: .gitignore  cpp_hiring_problem_round2.html
coding_problem (1)/coding_problem/problem/: CMakeLists.txt  Logger.cpp  Logger.hpp  build.bat  build_cmake.bat  main.cpp  simple_sdk.h  test_logger.cpp
problem_decorator/: build_cmake.sh  decorator.hpp  main.cpp  simple_sdk.c
problem_observer/: build.sh  main.cpp  observer.cpp  observer.hpp
problem_strategy/: CMakeLists.txt  main.cpp  strategy.cpp  strategy.hpp
problem_wrapper/: Logger.cpp  Logger.hpp  demo.cpp  main.cpp  simple_sdk.c  test_logger.cpp
